learning-demo-deploy/k8s/pod-imagepullpolicy.yml
apiVersion: v1
kind: Pod
metadata: 
  name: pod-imagepullpolicy
  namespace: dev
spec:
  containers:
  - name: nginx
    image: nginx:1.17.1
    imagePullPolicy: Always # 镜像拉取策略,Never Always IfNotPresent.
  - name: busybox
    image: busybox:1.30
