learning-demo-deploy/k8s/pod-nodename.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-nodename
  namespace: dev
spec:
  nodeName: node1  # 指定调度到node1节点上
  containers:
  - name: nginx
    image: nginx:1.17.1
