learning-demo-deploy/k8s/pod-restartpolicy.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-restartpolicy
  namespace: dev
spec:
  restartPolicy: Never    # 重启策略[Always(默认) | OnFailure | Never]
  containers:
  - name: nginx
    image: nginx:1.17.1
    ports:
    - name: nginx-port
      containerPort: 80
      protocol: TCP
    livenessProbe:
      httpGet:
        scheme: HTTP
        #host: 127.0.0.1
        port: 80
        path: /
